manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: myapp
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp 
    spec:
      containers:
      - image: gonzaloacosta/devops-spring-rest:0.0.2-SNAPSHOT
        name: myapp 
        ports:
        - containerPort: 8080
