manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-rest
  name: spring-rest
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-rest
